Add template for shop Items and item

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<header>
+		<h1>Welcome!</h1>
+    	<a class="start" href="#" alt="">START</a>
+	</header>
     
     <script src="js/all.js"></script>
 </body>
