Add class for remining product

--- a/app/shop.html
+++ b/app/shop.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<header class="shop">
 			<h1>SHOP</h1>
-			<span>5/10</span>
+			<span class="projRemaining">5/10</span>
 		</header>
 
 		<div class="well">
