Add enter button

--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header>
-		<h1>Welcome!</h1>
-    	<a class="start" href="#" alt="">START</a>
-	</header>
+	<div class="container">
+		<a href="#">START</a>
+	</div>
     
     <script src="js/all.js"></script>
 </body>
