--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<a href="#">START</a>
+		<a href="monster.html">START</a>
 	</div>
     
     <script src="js/all.js"></script>
