--- a/app/monster.html
+++ b/app/monster.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-<header>
+<section id="monster">
     <img src="images/stworek.png" alt="Monster">
     <div class="message">
         <h3>Witaj!</h3>
@@ -18,8 +10,4 @@
         </div>
     </div>
     <a class="start" href="shop.html" alt="">Dalej</a>
-</header>
-
-<script src="js/all.js"></script>
-</body>
-</html>
+</section>
