--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
 	<div class="container">
 		<a href="monster.html">START</a>
 	</div>
-    
+
+    @@include('./fridge.html')
     <script src="js/all.js"></script>
 </body>
 </html>
