--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="container">
-		<h1>Witaj!</h1>
-		<a href="monster.html">START</a>
-	</div>
 
+    @@include('./weclome.html')
     @@include('./fridge.html')
     <script src="js/all.js"></script>
 </body>
