--- a/app/welcome.html
+++ b/app/welcome.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<div class="container">
+		<h1>Witaj!</h1>
+		<a href="monster.html">START</a>
+	</div>
+    
     <script src="js/all.js"></script>
 </body>
 </html>
