Include monster file

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 <body>
 
     @@include('./weclome.html')
+    @@include('./monster.html')
     @@include('./fridge.html')
     <script src="js/all.js"></script>
 </body>
