fix that goddamn typo

--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<<<<<<< HEAD
-=======
-
-    @@include('./weclome.html')
+    @@include('./welcome.html')
     @@include('./monster.html')
     @@include('./fridge.html')
->>>>>>> a659627ba2ade09673a208fd78ac43af2e38616c
     <script src="js/all.js"></script>
 </body>
 </html>
