needs styles part 1 + color variables

--- a/app/monster.html
+++ b/app/monster.html
@@ -4,7 +4,16 @@
         <h3>Witaj!</h3>
         <p>Jestem Stworek, nakarm mnieee!</p>
         <div class="needs">
-            <div class="carbon">
+            <div class="kcal">
+                <div class="full"></div>
+            </div>
+            <div class="protein">
+                <div class="full"></div>
+            </div>
+            <div class="fat">
+                <div class="full"></div>
+            </div>
+            <div class="carbohydrates">
                 <div class="full"></div>
             </div>
         </div>
