--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 <body>
     @@include('./welcome.html')
     @@include('./monster.html')
+    @@include('./shop.html')
     @@include('./fridge.html')
     <script src="js/all.js"></script>
 </body>
