--- a/app/shop.html
+++ b/app/shop.html
@@ -1,36 +1,24 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="utf-8">
-    <title>SHOP</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-	<div class="shop container">
-		<header class="shop-header">
-			<h1>SHOP</h1>
-			<span class="projRemaining">5/10</span>
-		</header>
+<section id="shop">
+	<header class="shop-header">
+		<h1>SHOP</h1>
+		<span class="projRemaining">5/10</span>
+	</header>
 
-		<div class="well">
-			<div class="item">
+	<div class="well">
+		<div class="item">
 
-			</div>
-			<div class="item">
+		</div>
+		<div class="item">
 
-			</div>
-			<div class="item">
+		</div>
+		<div class="item">
 
-			</div>
-			<div class="item">
+		</div>
+		<div class="item">
 
-			</div>
-			<div class="item">
+		</div>
+		<div class="item">
 
-			</div>
 		</div>
 	</div>
-
-    <script src="js/all.js"></script>
-</body>
-</html>
+</section>
