0 margins for body,html and needs styles part2

--- a/app/monster.html
+++ b/app/monster.html
@@ -5,16 +5,16 @@
         <p>Jestem Stworek, nakarm mnieee!</p>
         <div class="needs">
             <div class="kcal">
-                <div class="full"></div>
+                <div class="blank"></div>
             </div>
             <div class="protein">
-                <div class="full"></div>
+                <div class="blank"></div>
             </div>
             <div class="fat">
-                <div class="full"></div>
+                <div class="blank"></div>
             </div>
             <div class="carbohydrates">
-                <div class="full"></div>
+                <div class="blank"></div>
             </div>
         </div>
     </div>
