--- a/app/fridge.html
+++ b/app/fridge.html
@@ -1,41 +1,31 @@
 <section id="fridge" class="fridge">
-  <img src="images/fridge.png" alt="" class="fridge--backround">
-  <div class="fridge--fridge">
-    <div class="fridge--fridge--items">
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-    </div>
-    <div class="fridge--fridge--items">
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-    </div>
-    <div class="fridge--fridge--items">
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-    </div>
-    <div class="fridge--fridge--items">
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-    </div>
-    <div class="fridge--fridge--items">
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-      <div class="fridge--fridge--items--item"></div>
-    </div>
+
+  <div class="fridge--content">
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
+    <div class="fridge--content--item"></div>
   </div>
   <div class="fridge--stats">
 
