finish state class

--- a/app/monster.html
+++ b/app/monster.html
@@ -9,5 +9,5 @@
             </div>
         </div>
     </div>
-    <a class="start" href="shop.html" alt="">Dalej</a>
+    <a class="start" href="#shop" alt="">Dalej</a>
 </section>
