--- a/app/shop.html
+++ b/app/shop.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="shop container">
+	<div id="shop" class="shop container">
 		<header class="shop-header">
 			<h1>SHOP</h1>
 			<span class="projRemaining">5/10</span>
