--- a/app/welcome.html
+++ b/app/welcome.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="container">
+	<div id="welcome" class="container">
 		<h1>Witaj!</h1>
-		<a href="monster.html">START</a>
+		<a href="#monster">START</a>
 	</div>
     
     <script src="js/all.js"></script>
