--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
 <body>
     @@include('./welcome.html')
     @@include('./monster.html')
+    @@include('./shop.html')
     @@include('./fridge.html')
+    @@include('./score.html')
     <script src="js/all.js"></script>
 </body>
 </html>
