--- a/app/monster.html
+++ b/app/monster.html
@@ -6,15 +6,19 @@
         <div class="needs">
             <div class="kcal">
                 <div class="blank"></div>
+                <div class="limit"></div>
             </div>
             <div class="protein">
                 <div class="blank"></div>
+                <div class="limit"></div>
             </div>
             <div class="fat">
                 <div class="blank"></div>
+                <div class="limit"></div>
             </div>
             <div class="carbohydrates">
                 <div class="blank"></div>
+                <div class="limit"></div>
             </div>
         </div>
     </div>
