Add scores files

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     @@include('./monster.html')
     @@include('./shop.html')
     @@include('./fridge.html')
+    @@include('./score.html')
     <script src="js/all.js"></script>
 </body>
 </html>
