html little changes

--- a/app/score.html
+++ b/app/score.html
@@ -6,5 +6,5 @@
     <img src="images/icons/pan.svg" alt="Pan">
     <img src="images/icons/pot.svg" alt="Pot">
 
-    <a class="start" href="#" alt="">Graj ponownie</a>
+    <a class="start" href="#monster" alt="">Graj ponownie</a>
 </section>
