--- a/app/welcome.html
+++ b/app/welcome.html
@@ -1,4 +1,4 @@
 <div class="container">
 		<h1>Witaj!</h1>
-		<a href="monster.html">START</a>
+	<a class="start" href="#monster" alt="">Start</a>
 </div>
