--- a/app/fridge.html
+++ b/app/fridge.html
@@ -1,31 +1,33 @@
 <section id="fridge" class="fridge">
 
   <div class="fridge--content">
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
-    <div class="fridge--content--item"></div>
+    <div class="fridge--content--wrapper">
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+      <div class="fridge--content--item"></div>
+    </div>
   </div>
   <div class="fridge--stats">
 
