--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     @@include('./welcome.html')
     @@include('./monster.html')
     @@include('./shop.html')
+    @@include('./tips.html')
     @@include('./fridge.html')
     @@include('./score.html')
     <script src="js/all.js"></script>
