--- a/app/score.html
+++ b/app/score.html
@@ -1,4 +1,5 @@
-<section id="score" class="score">
+<section id="score">
+    <div class="score">
     <h1>Twój wynik to:</h1>
     <h2>100</h2>
     <span>łącznie punktów: </span><span>100</span>
@@ -7,4 +8,5 @@
     <img src="images/icons/pot.svg" alt="Pot">
 
     <a class="start" href="#monster" alt="">Graj ponownie</a>
+    </div>
 </section>
