Fix fridge width

--- a/app/fridge.html
+++ b/app/fridge.html
@@ -1,38 +1,39 @@
-<section id="fridge" class="fridge">
-
-  <div class="fridge--content">
-    <div class="fridge--content--wrapper">
-
-
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
-      <div class="fridge--content--item"></div>
+<section id="fridge">
+  <div class="fridge">
+    <div class="fridge--content">
+      <div class="fridge--content--wrapper">
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+        <div class="fridge--content--item"></div>
+      </div>
     </div>
-  </div>
-  <div class="fridge--stats">
+    <div class="fridge--stats">
 
 
+    </div>
+
   </div>
+
 </section>
