display cart contents

--- a/app/shop.html
+++ b/app/shop.html
@@ -6,5 +6,8 @@
 
 <div class="well">
 </div>
+
+  <code class="cart"></code><br>
+
   <a class="start" href="#tips" alt="">Przejdź dalej :)</a>
 </section>
