--- a/app/welcome.html
+++ b/app/welcome.html
@@ -1,6 +1,8 @@
 <section id="welcome">
+    <div class="welcome">
     <div class="container">
         <h1>Witaj!</h1>
         <a class="start" href="#monster" alt="">Start</a>
+    </div>
     </div>
 </section>
