--- a/app/fridge.html
+++ b/app/fridge.html
@@ -30,7 +30,25 @@
       </div>
     </div>
     <div class="fridge--stats">
-
+      <h3>Aktualne spożycie</h3>
+      <div class="needs">
+          <div class="kcal">
+              <div class="blank"></div>
+              <div class="limit"></div>
+          </div>
+          <div class="protein">
+              <div class="blank"></div>
+              <div class="limit"></div>
+          </div>
+          <div class="fat">
+              <div class="blank"></div>
+              <div class="limit"></div>
+          </div>
+          <div class="carbohydrates">
+              <div class="blank"></div>
+              <div class="limit"></div>
+          </div>
+      </div>
 
     </div>
 
