--- a/app/monster.html
+++ b/app/monster.html
@@ -1,4 +1,5 @@
 <section id="monster">
+    <div class="monster">
     <img src="images/stworek.png" alt="Monster">
     <div class="message">
         <h3>Witaj!</h3>
@@ -23,4 +24,5 @@
         </div>
     </div>
     <a class="start" href="#shop" alt="">Dalej</a>
+    </div>
 </section>
