Add clock to shop

--- a/app/shop.html
+++ b/app/shop.html
@@ -3,7 +3,9 @@
     <h1>SHOP</h1>
     <span class="projRemaining">5/10</span>
   </header>
-
+  <div class="timer">
+    <img id="timer" src="images/clock.PNG">
+  </div>
 <div class="well">
 </div>
 
