--- a/app/fridge.html
+++ b/app/fridge.html
@@ -49,6 +49,9 @@
               <div class="limit"></div>
           </div>
       </div>
+      <div>
+        <a href="#score" class="fridge--stats--button">Zakończ rundę</a>
+      </div>
 
     </div>
 
