--- a/app/score.html
+++ b/app/score.html
@@ -2,11 +2,11 @@
     <div class="score">
         <h1>Twój wynik to:</h1>
         <h2>100</h2>
-        <span>łącznie punktów: </span><span>100</span>
+        <h3>łącznie punktów: 100</h3>
 
         <img src="images/icons/pan.svg" alt="Pan">
         <img src="images/icons/pot.svg" alt="Pot">
-
-        <a class="start" href="#monster" alt="">Graj ponownie</a>
+        <a class="start" href="#monster" alt="">Graj ponownie</a>  
+        
     </div>
 </section>
