--- a/app/welcome.html
+++ b/app/welcome.html
@@ -2,6 +2,7 @@
     <div class="welcome">
     <div class="container">
         <h1>Witaj!</h1>
+        <p>Przed Tobą gra "Nazwa została zjedzona". Przez kogo? Dobre pytanie! Przez tajemnicze stworki z niezwykłym apetytem. Czy będziesz w stanie zaspokoić ich żołądki? Przekonaj się sam!</p>
         <a class="start" href="#monster" alt="">Start</a>
     </div>
     </div>
