--- a/app/monster.html
+++ b/app/monster.html
@@ -1,10 +1,34 @@
 <section id="monster">
     <div class="monster">
-    <img src="images/stworek.png" alt="Monster">
-    <div class="message">
-        <h3>Witaj!</h3>
-        <p>Jestem Stworek, nakarm mnieee!</p>
-    </div>
-    <a class="start" href="#shop" alt="">Dalej</a>
+      <div class="monster--left">
+        <img src="images/stworek.png" alt="Monster" class="monster--img">
+      </div>
+      <div class="monster--right">
+        <div class="monster--message">
+            <h3>Witaj!</h3>
+            <p>Jestem Stworek, nakarm mnieee!</p>
+        </div>
+        <div class="needs">
+            <div class="kcal">
+                <div class="blank"></div>
+                <div class="limit"></div>
+            </div>
+            <div class="protein">
+                <div class="blank"></div>
+                <div class="limit"></div>
+            </div>
+            <div class="fat">
+                <div class="blank"></div>
+                <div class="limit"></div>
+            </div>
+            <div class="carbohydrates">
+                <div class="blank"></div>
+                <div class="limit"></div>
+            </div>
+        </div>
+        <a class="start" href="#shop" alt="">Dalej</a>
+      </div>
+
+
     </div>
 </section>
