--- a/app/shop.html
+++ b/app/shop.html
@@ -1,7 +1,6 @@
 <section id="shop">
   <header class="shop-header">
     <h1>SHOP</h1>
-    <span class="projRemaining">5/10</span>
   </header>
   <div class="timer">
     <img id="timer" src="images/clock.PNG">
@@ -12,4 +11,9 @@
   <code class="cart"></code><br>
 
   <a class="start" href="#tips" alt="">Przejdź dalej :)</a>
+
+  <div class="circleScore">
+    <span class="projRemaining">5/10</span>
+  </div>
+
 </section>
