tips html and styles

--- a/app/tips.html
+++ b/app/tips.html
@@ -1,6 +1,8 @@
 <section id="tips">
+    <div class="tips">
     <div class="container">
         <p>Marchewki są taaaakie zdrowe!</p>
         <a class="start" href="#fridge" alt="">Graj dalej :)</a>
+    </div>
     </div>
 </section>
