--- a/app/tips.html
+++ b/app/tips.html
@@ -1,7 +1,7 @@
 <section id="tips">
     <div class="tips">
     <div class="container">
-        <p>Marchewki są taaaakie zdrowe!</p>
+        <p id="#best-tip-ever">Marchewki są taaaakie zdrowe!</p>
         <a class="start" href="#fridge" alt="">Graj dalej :)</a>
     </div>
     </div>
