--- a/app/shop.html
+++ b/app/shop.html
@@ -9,8 +9,10 @@
 </div>
 
   <code class="cart"></code><br>
-
-  <a class="start" href="#tips" alt="">Przejdź dalej :)</a>
+  
+  <div class="nextStep">
+  	  <a class="start" href="#tips" alt="">Przejdź dalej :)</a>
+  </div>
 
   <div class="circleScore">
     <span class="projRemaining">5/10</span>
