--- a/app/monster.html
+++ b/app/monster.html
@@ -26,7 +26,7 @@
                 <div class="limit"></div>
             </div>
         </div>
-        <div>
+        <div class="button">
           <a class="start monster--button" href="#shop" alt="">Dalej</a>
         </div>
       </div>
