--- a/app/shop.html
+++ b/app/shop.html
@@ -1,4 +1,5 @@
 <section id="shop">
+  <div class="shop">
   <header class="shop-header">
     <h1>SHOP</h1>
   </header>
@@ -17,5 +18,5 @@
   <div class="circleScore">
     <span class="projRemaining">5/10</span>
   </div>
-
+  </div>
 </section>
