--- a/app/shop.html
+++ b/app/shop.html
@@ -1,7 +1,7 @@
 <section id="shop">
   <div class="shop">
   <header class="shop-header">
-    <h1>SHOP</h1>
+    <h1>SKLEP - na bogato</h1>
   </header>
   <div class="timer">
     <img id="timer" src="images/clock.PNG">
