--- a/app/fridge.html
+++ b/app/fridge.html
@@ -22,13 +22,19 @@
           <div class="carbohydrates">
               <div class="blank"></div>
               <div class="limit"></div>
-          </div>
+          </div>  
       </div>
-      
       <div>
         <a href="#score" class="fridge--stats--button">Zakończ rundę</a>
       </div>
-
+      <div class="Legenda">
+        <h3>Legenda: </h3>
+        <span class="valueKcal">Max Kcal: </span><br/>
+        <span class="valueProtein">Max Protein: </span><br/>
+        <span class="valueFat">Max Fat: </span><br/>
+        <span class="valueCarbo">Max Carbo: </span><br/>
+      </div>
+      
     </div>
   </div>
 </section>
