--- a/app/fridge.html
+++ b/app/fridge.html
@@ -27,10 +27,10 @@
 
       <div class="Legenda">
         <h3>Legenda: </h3>
-        <span class="valueKcal">Max Kcal: </span><br/>
-        <span class="valueProtein">Max Protein: </span><br/>
-        <span class="valueFat">Max Fat: </span><br/>
-        <span class="valueCarbo">Max Carbo: </span><br/>
+        Max Kcal:<span class="valueKcal"> </span><br/>
+        Max Protein:<span class="valueProtein"> </span><br/>
+        Max Fat:<span class="valueFat"> </span><br/>
+        Max Carbo:<span class="valueCarbo"> </span><br/>
       </div>
       
       <div>
