--- a/app/score.html
+++ b/app/score.html
@@ -1,8 +1,8 @@
 <section id="score">
     <div class="score">
         <h1>Twój wynik to:</h1>
-        <h2>100</h2>
-        <h3>łącznie punktów: 100</h3>
+        <h2></h2>
+        <h3>łącznie punktów: <span id="total"></span></h3>
 
         <img src="images/icons/pan.svg" alt="Pan">
         <img src="images/icons/pot.svg" alt="Pot">
