--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,12 @@
     @@include('./tips.html')
     @@include('./fridge.html')
     @@include('./score.html')
+
+    <audio id="media-player" controls loop>
+        <source src="sounds/bensound-cute.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    
     <script src="js/all.js"></script>
 </body>
 </html>
