--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,10 @@
     @@include('./fridge.html')
     @@include('./score.html')
 
+    <footer class="credits">
+        Made by <a href="//akai.org.pl">AKAI</a> with 💛 || background music from <a href="http://www.bensound.com/royalty-free-music">bensound.com</a>
+    </footer>
+
     <audio id="media-player" controls loop>
         <source src="sounds/bensound-cute.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
