--- a/app/shop.html
+++ b/app/shop.html
@@ -11,7 +11,7 @@
 
   <code class="cart"></code><br>
   
-  <div class="nextStep">
+  <div class="button nextStep">
   	  <a class="start" href="#tips" alt="">Przejdź dalej :)</a>
   </div>
 
