--- a/app/tips.html
+++ b/app/tips.html
@@ -2,7 +2,9 @@
     <div class="tips">
     <div class="container">
         <p id="best-tip-ever">Marchewki są taaaakie zdrowe!</p>
-        <a class="start" href="#fridge" alt="">Graj dalej :)</a>
+        <div class="button">
+            <a class="start" href="#fridge" alt="">Graj dalej :)</a>
+        </div>
     </div>
     </div>
 </section>
