--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     @@include('./score.html')
 
     <footer class="credits">
-        Made by <a href="//akai.org.pl">AKAI</a> with 💛 || background music from <a href="http://www.bensound.com/royalty-free-music">bensound.com</a>
+        Made by <a href="//akai.org.pl">AKAI</a> with 💛 &nbsp|| background music from <a href="http://www.bensound.com/royalty-free-music">bensound.com</a>
     </footer>
 
     <audio id="media-player" controls loop>
