style welcome screen

--- a/app/welcome.html
+++ b/app/welcome.html
@@ -3,7 +3,14 @@
     <div class="container">
       <h1>Witaj!</h1>
       <p>Przed Tobą gra "Nazwa została zjedzona". Przez kogo? Dobre pytanie! Przez tajemnicze stworki z niezwykłym apetytem. Czy będziesz w stanie zaspokoić ich żołądki? Przekonaj się sam!</p>
-      <a class="start" href="#monster" alt="">Start</a>
+      <div>
+        <div class="button orange">
+          <a class="start" href="#monster" onclick='document.getElementById("media-player").play();' alt="">Rozpocznij grę z muzyką</a>
+        </div>
+        <div class="button">
+          <a class="start" href="#monster" alt="">Rozpocznij grę</a>
+        </div>
+      </div>
     </div>
   </div>
 </section>
