--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <meta name="viewport" content="initial-scale=1">
+  <title>Zdrowieton 2017 - Nazwa została zjedzona - AKAI</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
