add responsive shelf using js

--- a/app/shop.html
+++ b/app/shop.html
@@ -1,7 +1,7 @@
 <section id="shop">
   <div class="shop">
   <header class="shop-header">
-    <h1>SKLEP - na bogato</h1>
+    <h1>SKLEP - Na bogato 💵</h1>
   </header>
   <div class="timer">
     <img id="timer" src="images/clock.PNG">
@@ -12,7 +12,7 @@
   <code class="cart"></code><br>
   
   <div class="button nextStep">
-  	  <a class="start" href="#tips" alt="">Przejdź dalej :)</a>
+  	  <a class="start" href="#tips" alt="">Przejdź dalej 🙂</a>
   </div>
 
   <div class="circleScore">
